--- a/analyzers/CyberCrime-Tracker/Dockerfile
+++ b/analyzers/CyberCrime-Tracker/Dockerfile
@@ -5,9 +5,9 @@
 # Guessing base image from source code shebang
 FROM python:3-alpine
 
-LABEL name="CyberCrime-Tracker"
-LABEL description="Search cybercrime-tracker.net for C2 servers."
-LABEL author="ph34tur3"
+LABEL name="CyberCrimeTracker" \
+      description="Search cybercrime-tracker.net for C2 servers." \
+      author="ph34tur3"
 
 WORKDIR /worker
 
